move index.html

--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Modern Business - Start Bootstrap Template</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -52,7 +52,7 @@
                                             <button class="btn btn-primary" type="button" onclick="showVideo()">Demo Video</button>
                                             <script>
                                                 function showVideo() {
-                                                    window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_bat_and ball_analyze.mp4', '_blank', 'width=700,height=400');
+                                                    window.open('././Sports_Baseball_Bs_20240601_V1B1_侯詠章_bat_and ball_analyze.mp4', '_blank', 'width=700,height=400');
                                                 }
                                             </script>
                                             <button class="btn btn-primary ms-3" type="button" onclick="showrepo()">
@@ -79,7 +79,7 @@
                                         <button class="btn btn-primary" type="button" onclick="showVideo1()">Demo Video</button>
                                         <script>
                                             function showVideo1() {
-                                                window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_sideview_skeleton.mp4', '_blank', 'width=700,height=400');
+                                                window.open('././Sports_Baseball_Bs_20240601_V1B1_侯詠章_sideview_skeleton.mp4', '_blank', 'width=700,height=400');
                                             }
                                         </script>
                                         <button class="btn btn-primary ms-3" type="button" onclick="showrepo1()">
@@ -97,7 +97,7 @@
                                         <button class="btn btn-primary" type="button" onclick="showVideo2()">Demo Video</button>
                                         <script>
                                             function showVideo2() {
-                                                window.open('./assets/Sports_Baseball_Bs_20240601_V1B1_侯詠章_release_point.mp4', '_blank', 'width=700,height=400');
+                                                window.open('././Sports_Baseball_Bs_20240601_V1B1_侯詠章_release_point.mp4', '_blank', 'width=700,height=400');
                                             }
                                         </script>
                                         <button class="btn btn-primary ms-3" type="button" onclick="showrepo2()">
