--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Personal - Start Bootstrap Template</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="./favicon.ico" />
         <!-- Custom Google font-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -47,7 +47,7 @@
                                 <h2 class="text-secondary fw-bolder mb-4">Education</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="./assets/resume-Jarvis-Hou.pdf" download>
+                                <a class="btn btn-primary px-4 py-3" href="././resume-Jarvis-Hou.pdf" download>
                                     <div class="d-inline-block bi bi-download me-2"></div>
                                     Download Resume
                                 </a>
