--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
                                             <button class="btn btn-primary" type="button" onclick="showVideo()">Demo Video</button>
                                             <script>
                                                 function showVideo() {
-                                                    window.open('././Sports_Baseball_Bs_20240601_V1B1_侯詠章_bat_and ball_analyze.mp4', '_blank', 'width=700,height=400');
+                                                    window.open('./Sports_Baseball_Bs_20240601_V1B1_侯詠章_bat_and ball_analyze.mp4', '_blank', 'width=700,height=400');
                                                 }
                                             </script>
                                             <button class="btn btn-primary ms-3" type="button" onclick="showrepo()">
