--- a/projects.html
+++ b/projects.html
@@ -49,14 +49,15 @@
                                     <div class="p-5">
                                         <h2 class="fw-bolder">Baseball Swing Analysis</h2>
                                         <p>With yolov7, we track the bat and ball, then do the analysis on data(ex. Bat Speed,Exit Velo)</p>
-                                        <div class="d-flex align-items-center">
+                                        
                                             <button class="btn btn-primary" type="button" onclick="showVideo()">Demo Video</button>
                                             <script>
                                                 function showVideo() {
                                                     window.open('https://youtu.be/xl943erV4E0', '_blank');
                                                 }
                                             </script>
-                                            <button class="btn btn-primary ms-3" type="button" onclick="showrepo()">
+                                            <p></p>
+                                            <button class="btn btn-primary ms" type="button" onclick="showrepo()">
                                                 <i class="bi bi-github bi"></i>
                                                 Github repo
                                             </button>
@@ -65,7 +66,7 @@
                                                     window.open('https://github.com/Jar-17/yolov7_for_baseball', '_blank');
                                                 }
                                             </script>
-                                        </div>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -76,14 +77,14 @@
                                         <h2 class="fw-bolder">Pitcher Motion Analysis</h2>
                                         <p>With mediapipe, we track the pitcher's motion ,show the hand path and slow down clips to hightlight the important part in pitching</p>
                                         <h6 class="fw-bolder">Sideview Skeleton Analysis</h6>
-                                        <p></p>
                                         <button class="btn btn-primary" type="button" onclick="showVideo1()">Demo Video</button>
                                         <script>
                                             function showVideo1() {  
                                                 window.open('https://youtu.be/I_0Q7rf-Wz8', '_blank');
                                             }
                                         </script>
-                                        <button class="btn btn-primary ms-3" type="button" onclick="showrepo1()">
+                                        <p></p>
+                                        <button class="btn btn-primary" type="button" onclick="showrepo1()">
                                             <i class="bi bi-github bi"></i>
                                             Github repo
                                         </button>
@@ -93,15 +94,15 @@
                                             }
                                         </script>
                                         <p></p>
-                                        <h6 class="fw-bolder">Frontview Release Point Analysis</h6>
-                                        <p></p>
+                                        <h6 class="fw-bolder">Frontview Release Point Analysis</h6>                                   
                                         <button class="btn btn-primary" type="button" onclick="showVideo2()">Demo Video</button>
                                         <script>
                                             function showVideo2() {
                                                 window.open('https://youtu.be/ETRLi-2n9kw', '_blank');    
                                             }
                                         </script>
-                                        <button class="btn btn-primary ms-3" type="button" onclick="showrepo2()">
+                                        <p></p>
+                                        <button class="btn btn-primary" type="button" onclick="showrepo2()">
                                             <i class="bi bi-github bi"></i>
                                             Github repo
                                         </button>
