--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 
-<img src="dist/assets/handsome_photo.jpg" style="width:220px;height:300px;object-fit:cover;border-radius:6px;flex-shrink:0;">
+<img src="dist/assets/handsome_photo.png" style="width:220px;height:300px;object-fit:cover;border-radius:6px;flex-shrink:0;">
 </div>
 
 <div class="section">
